--- a/Project  ML - GPICARD_HPICARD_TPELOU - IF5.ipynb
+++ b/Project  ML - GPICARD_HPICARD_TPELOU - IF5.ipynb
@@ -41,15 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4a1a20d-baff-44d1-934f-058576e276a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ============================================================\n",
-    "# 1. Import all necessary libraries\n",
-    "# ============================================================\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -85,12 +81,20 @@
     "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4180e1-a9f1-448d-ba8b-078789961845",
+   "metadata": {},
+   "source": [
+    "### Load dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b8bc5158-d027-4053-8f65-157473285aba",
    "metadata": {},
    "outputs": [
@@ -104,10 +108,6 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 2. Load datasets\n",
-    "# ============================================================\n",
-    "\n",
     "app = pd.read_csv(\"application_record.csv\")\n",
     "credit = pd.read_csv(\"credit_record.csv\")\n",
     "\n",
@@ -119,8 +119,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48405ffe-71a0-4eb0-94db-26cfa400bbf8",
+   "metadata": {},
+   "source": [
+    "### Create target variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d294f912-099c-452a-b5cc-6098eec83001",
    "metadata": {},
    "outputs": [
@@ -324,35 +332,22 @@
        "4              1.0    No       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 3. Create target variable EXACTLY like your original code\n",
-    "# ============================================================\n",
-    "\n",
-    "# Mark delinquencies\n",
     "credit[\"value\"] = None\n",
     "credit.loc[credit[\"STATUS\"].isin([\"1\",\"2\",\"3\",\"4\",\"5\"]), \"value\"] = \"Yes\"\n",
-    "\n",
-    "# Count occurrences per client\n",
     "countV = credit.groupby(\"ID\").count()\n",
     "countV[\"value\"] = countV[\"value\"].astype(object)\n",
     "countV.loc[countV[\"value\"] > 0, \"value\"] = \"Yes\"\n",
     "countV.loc[countV[\"value\"] == 0, \"value\"] = \"No\"\n",
-    "\n",
     "countV = countV[[\"value\"]]\n",
-    "\n",
-    "# Merge with application dataset\n",
     "data = pd.merge(app, countV, on=\"ID\", how=\"inner\")\n",
-    "\n",
-    "# Convert Yes/No to 1/0\n",
     "data[\"target\"] = (data[\"value\"] == \"Yes\").astype(int)\n",
-    "\n",
-    "data.head()\n"
+    "data.head()"
    ]
   },
   {
@@ -368,6 +363,14 @@
     "- Summary statistics  \n",
     "- Correlation matrix  \n",
     "- Types of features  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47a44aa9-16fc-4204-adb2-ce58f4112905",
+   "metadata": {},
+   "source": [
+    "### Dataset infos"
    ]
   },
   {
@@ -458,19 +461,13 @@
     }
    ],
    "source": [
-    "# Dataset info\n",
     "print(data.info())\n",
-    "\n",
-    "# Missing values\n",
     "print(\"\\nMissing values:\\n\", data.isnull().sum())\n",
-    "\n",
-    "# Target distribution\n",
     "plt.figure(figsize=(5,4))\n",
     "sns.countplot(x=data[\"target\"])\n",
     "plt.title(\"Target distribution\")\n",
     "plt.show()\n",
-    "\n",
-    "data[\"target\"].value_counts(normalize=True)\n"
+    "data[\"target\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -492,11 +489,18 @@
    ],
    "source": [
     "numeric_df = data.select_dtypes(include=[\"int64\",\"float64\"])\n",
-    "\n",
     "plt.figure(figsize=(10,7))\n",
     "sns.heatmap(numeric_df.corr(), cmap=\"coolwarm\")\n",
     "plt.title(\"Correlation matrix\")\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2831e3a8-af39-4cf6-94a3-15674af1b3d8",
+   "metadata": {},
+   "source": [
+    "### Preprocessing"
    ]
   },
   {
@@ -506,29 +510,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ============================================================\n",
-    "# 4. PREPROCESSING\n",
-    "# ============================================================\n",
-    "\n",
     "X = data.drop(columns=[\"target\", \"value\", \"ID\"])\n",
     "y = data[\"target\"]\n",
-    "\n",
-    "# Identify column types\n",
     "categorical_cols = X.select_dtypes(include=[\"object\"]).columns\n",
     "numeric_cols = X.select_dtypes(include=[\"int64\",\"float64\"]).columns\n",
-    "\n",
-    "# Preprocessing transformer\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"num\", StandardScaler(), numeric_cols),\n",
     "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols)\n",
     "    ]\n",
     ")\n",
-    "\n",
-    "# Train/Test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.3, random_state=42, stratify=y\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7d6113a-d149-4b4e-96ed-29271735241f",
+   "metadata": {},
+   "source": [
+    "### Baseline Model: Logistic Regression"
    ]
   },
   {
@@ -554,19 +556,13 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 5. BASELINE MODEL: Logistic Regression\n",
-    "# ============================================================\n",
-    "\n",
     "baseline_model = Pipeline(steps=[\n",
     "    (\"preprocess\", preprocessor),\n",
     "    (\"model\", LogisticRegression(max_iter=800))\n",
     "])\n",
-    "\n",
     "baseline_model.fit(X_train, y_train)\n",
     "baseline_pred = baseline_model.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test, baseline_pred))\n"
+    "print(classification_report(y_test, baseline_pred))"
    ]
   },
   {
@@ -576,27 +572,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(name, model, X_train, X_test, y_train, y_test):\n",
-    "    \"\"\"Train and evaluate a model using standard metrics.\"\"\"\n",
-    "    \n",
+    "def evaluate_model(name, model, X_train, X_test, y_train, y_test):  \n",
     "    model.fit(X_train, y_train)\n",
     "    pred = model.predict(X_test)\n",
-    "    \n",
-    "    # Compute evaluation metrics\n",
     "    acc = accuracy_score(y_test, pred)\n",
     "    prec = precision_score(y_test, pred)\n",
     "    rec = recall_score(y_test, pred)\n",
     "    f1 = f1_score(y_test, pred)\n",
-    "    \n",
-    "    # Use probabilities or decision score for ROC-AUC\n",
     "    if hasattr(model, \"predict_proba\"):\n",
     "        roc = roc_auc_score(y_test, model.predict_proba(X_test)[:,1])\n",
     "    else:\n",
-    "        roc = roc_auc_score(y_test, model.decision_function(X_test))\n",
-    "    \n",
+    "        roc = roc_auc_score(y_test, model.decision_function(X_test)) \n",
     "    print(f\"\\n===== {name} =====\")\n",
     "    print(classification_report(y_test, pred))\n",
-    "    \n",
     "    return {\n",
     "        \"Model\": name,\n",
     "        \"Accuracy\": acc,\n",
@@ -604,7 +592,15 @@
     "        \"Recall\": rec,\n",
     "        \"F1\": f1,\n",
     "        \"ROC-AUC\": roc\n",
-    "    }\n"
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1345783-1ab9-452e-a227-016a81e90d58",
+   "metadata": {},
+   "source": [
+    "### Standard Machine Learning Models"
    ]
   },
   {
@@ -654,10 +650,6 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 6. STANDARD ML MODELS\n",
-    "# ============================================================\n",
-    "\n",
     "results = []\n",
     "\n",
     "# Decision Tree\n",
@@ -679,7 +671,15 @@
     "    (\"preprocess\", preprocessor),\n",
     "    (\"model\", SVC(kernel=\"rbf\", probability=True, random_state=42))\n",
     "])\n",
-    "results.append(evaluate_model(\"SVM (RBF Kernel)\", svm_model, X_train, X_test, y_train, y_test))\n"
+    "results.append(evaluate_model(\"SVM (RBF Kernel)\", svm_model, X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b1faf20-5022-4109-a4f6-37a8774b0c9d",
+   "metadata": {},
+   "source": [
+    "### PCA"
    ]
   },
   {
@@ -707,17 +707,20 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 7. PCA + Logistic Regression\n",
-    "# ============================================================\n",
-    "\n",
     "pca_model = Pipeline([\n",
     "    (\"preprocess\", preprocessor),\n",
     "    (\"pca\", PCA(n_components=10)),\n",
     "    (\"model\", LogisticRegression(max_iter=800))\n",
     "])\n",
-    "\n",
-    "results.append(evaluate_model(\"LogReg + PCA\", pca_model, X_train, X_test, y_train, y_test))\n"
+    "results.append(evaluate_model(\"LogReg + PCA\", pca_model, X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "332475b2-c1e2-4d81-84bf-1785cac53ede",
+   "metadata": {},
+   "source": [
+    "### Cost-Sensitive Models"
    ]
   },
   {
@@ -756,21 +759,24 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 8. COST-SENSITIVE MODELS (CLASS WEIGHT)\n",
-    "# ============================================================\n",
-    "\n",
     "logreg_bal = Pipeline([\n",
     "    (\"preprocess\", preprocessor),\n",
     "    (\"model\", LogisticRegression(max_iter=800, class_weight=\"balanced\"))\n",
     "])\n",
     "results.append(evaluate_model(\"LogReg (balanced)\", logreg_bal, X_train, X_test, y_train, y_test))\n",
-    "\n",
     "rf_bal = Pipeline([\n",
     "    (\"preprocess\", preprocessor),\n",
     "    (\"model\", RandomForestClassifier(n_estimators=300, class_weight=\"balanced\", random_state=42))\n",
     "])\n",
-    "results.append(evaluate_model(\"RandomForest (balanced)\", rf_bal, X_train, X_test, y_train, y_test))\n"
+    "results.append(evaluate_model(\"RandomForest (balanced)\", rf_bal, X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d10f194c-18e6-48e4-9a76-b83c22860558",
+   "metadata": {},
+   "source": [
+    "### Resampling"
    ]
   },
   {
@@ -809,10 +815,6 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 9. RESAMPLING (Oversampling & SMOTE)\n",
-    "# ============================================================\n",
-    "\n",
     "# Random Oversampling\n",
     "ros_rf = ImbPipeline([\n",
     "    (\"preprocess\", preprocessor),\n",
@@ -827,7 +829,15 @@
     "    (\"smote\", SMOTE(random_state=42)),\n",
     "    (\"model\", RandomForestClassifier(n_estimators=300, random_state=42))\n",
     "])\n",
-    "results.append(evaluate_model(\"RandomForest + SMOTE\", smote_rf, X_train, X_test, y_train, y_test))\n"
+    "results.append(evaluate_model(\"RandomForest + SMOTE\", smote_rf, X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26770334-b7e4-4d2c-8882-25dd0dc5c99a",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
    ]
   },
   {
@@ -840,15 +850,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost not installed; skipping.\n"
+      "\n",
+      "===== XGBoost + SMOTE =====\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.96      0.92      9651\n",
+      "           1       0.25      0.10      0.15      1287\n",
+      "\n",
+      "    accuracy                           0.86     10938\n",
+      "   macro avg       0.57      0.53      0.53     10938\n",
+      "weighted avg       0.81      0.86      0.83     10938\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 10. ADVANCED MODEL: XGBoost\n",
-    "# ============================================================\n",
-    "\n",
     "try:\n",
     "    from xgboost import XGBClassifier\n",
     "\n",
@@ -869,6 +885,14 @@
     "\n",
     "except ImportError:\n",
     "    print(\"XGBoost not installed; skipping.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01ca211-a385-4494-b16c-c81462db2316",
+   "metadata": {},
+   "source": [
+    "### Threshold Optimisation"
    ]
   },
   {
@@ -898,31 +922,27 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 11. THRESHOLD OPTIMISATION (best model)\n",
-    "# ============================================================\n",
-    "\n",
-    "best_model = smote_rf   # You may change this based on results\n",
+    "best_model = smote_rf\n",
     "best_model_name = \"RandomForest + SMOTE\"\n",
-    "\n",
     "best_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Get scores\n",
     "y_scores = best_model.predict_proba(X_test)[:,1]\n",
-    "\n",
     "prec, rec, thr = precision_recall_curve(y_test, y_scores)\n",
     "f1_vals = 2 * (prec * rec) / (prec + rec + 1e-9)\n",
-    "\n",
     "best_idx = np.argmax(f1_vals)\n",
     "best_thr = thr[best_idx]\n",
-    "\n",
     "print(\"Best threshold:\", best_thr)\n",
     "print(\"Best F1:\", f1_vals[best_idx])\n",
-    "\n",
     "y_pred_opt = (y_scores >= best_thr).astype(int)\n",
-    "\n",
     "print(\"\\nReport with optimized threshold:\")\n",
-    "print(classification_report(y_test, y_pred_opt))\n"
+    "print(classification_report(y_test, y_pred_opt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f538a09-083e-4834-8f5a-b8b9cbd5832f",
+   "metadata": {},
+   "source": [
+    "### Final Model Comparison"
    ]
   },
   {
@@ -1016,6 +1036,15 @@
        "      <td>0.553721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>XGBoost + SMOTE</td>\n",
+       "      <td>0.857287</td>\n",
+       "      <td>0.248162</td>\n",
+       "      <td>0.104895</td>\n",
+       "      <td>0.147460</td>\n",
+       "      <td>0.586094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SVM (RBF Kernel)</td>\n",
        "      <td>0.882520</td>\n",
@@ -1045,6 +1074,7 @@
        "1                Random Forest  0.886817   0.535871  0.284382  0.371574   \n",
        "0                Decision Tree  0.878406   0.473091  0.293706  0.362416   \n",
        "4            LogReg (balanced)  0.582465   0.136202  0.477078  0.211907   \n",
+       "8              XGBoost + SMOTE  0.857287   0.248162  0.104895  0.147460   \n",
        "2             SVM (RBF Kernel)  0.882520   0.625000  0.003885  0.007722   \n",
        "3                 LogReg + PCA  0.882337   0.000000  0.000000  0.000000   \n",
        "\n",
@@ -1055,6 +1085,7 @@
        "1  0.790080  \n",
        "0  0.740546  \n",
        "4  0.553721  \n",
+       "8  0.586094  \n",
        "2  0.668086  \n",
        "3  0.538121  "
       ]
@@ -1065,12 +1096,8 @@
     }
    ],
    "source": [
-    "# ============================================================\n",
-    "# 12. FINAL MODEL COMPARISON TABLE\n",
-    "# ============================================================\n",
-    "\n",
     "results_df = pd.DataFrame(results)\n",
-    "results_df.sort_values(by=\"F1\", ascending=False)\n"
+    "results_df.sort_values(by=\"F1\", ascending=False)"
    ]
   },
   {
